# ESP32_TEMPERATURE_HUMIDITY

./: CMakeLists.txt  README_VN.md  sdkconfig.defaults
main/: CMakeLists.txt  app_config.h  app_main.c  app_state.c  app_state.h  app_types.h  i2c_bus.c  i2c_bus.h  lcd2004.c  lcd2004.h  rtc_ds3231.c  rtc_ds3231.h  sds011.c  sds011.h  sensors.c  sensors.h  storage_sd.c  storage_sd.h  ui_menu.c  ui_menu.h  web_server.c  web_server.h
